# pleiotropy

./: .Rhistory  .gitignore  Makefile  Plans.md  README.md  TODO.md  index.html  mkdocs.yml  pyproject.toml
.Rproj.user/79E30950/: persistent-state  rmd-outputs  session-persistent-state
Results/Fitness patterns/: barcode-level.html  cluster-level.html  scatterplots.html
Results/Lineage summaries/: summaries.html
Supplemental Information/: si_methods.html
_obs/: BC_mapper.Rmd  BC_mapper.nb.html  FIG_PLANNING_V1.Rmd  FIG_PLANNING_V1.nb.html  PLT.Rproj  TODO.md  WGS_2N_Identifying_additl_clones.Rmd  WGS_BC_reconciling_2019-JUN-18.Rmd  WGS_BC_reconciling_2019-JUN-18.nb.html
analysis/scripts/: cluster_lineages.R  filter_autodiploids.R  plot_by_bc.R  plt_heatmap1.R  summarise_clusters.R
data/combined/: hBFA1_cutoff-5_compiled_data_by_barcode.csv
data/mutation_data/: ReAnn_FLC_R1R2_1N_variants_map.xlsx  gene_list.txt  (+6 more)
docs/: index.md
manuscript/: plt.bib
rds/: adapteds.rds  res.full.rds
scripts/: .Rhistory  adapted_functions.R  bfa_bc_adaptifier_routine.sh  calc_pw_clust_dist.R  call_adapteds.R  call_adapteds_obs.R  call_adapteds_test.R  cluster_lineages.R  combine_BCs_and_WGS.R  compile_data_by_barcode.R  filter_autodiploids.R  map_go-slim_to_genes.R  plot_bc_dendro.R  plot_by_bc.R  plot_by_cluster.R  plot_cluster_dendro.R  summarise_clusters.R  summarise_sources.R  tabulate_by_env.R  tally_adapteds.R  tally_adapteds_report_template.Rmd  tsne_lineages.R  zHenriquesLab-StyleBioRxiv.cls
search/: search_index.json
site/: 404.html  index.html
(+1486 files in other folders)
