[tool.poetry]
name = "pleiotropy"
version = "0.1.0"
description = "Source and data for PLT"
authors = ["Parris T Humphrey, Ph.D. <phumphrey@g.harvard.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.1.2"
mkdocs-bibtex = "^0.3.1"
mkdocs-material = "^7.1.3"
mkdocs-pymdownx-material-extras = "^1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
